--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,69 +1,74 @@
 @use "vars";
-
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 24px;
-    border-bottom: 1px solid var(--very-ligth-pink);
+nav {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 24px;
+	border-bottom: 1px solid var(--very-light-pink);
 }
-.menu{
-    display: none;
+.menu {
+	display: none;
 }
-.logo{
-    width: 200px;
+.logo {
+	width: 100px;
 }
-.nanvbar-left ul ,
-.nanvbar-right ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    right: 60px;
+.navbar-left ul,
+.navbar-right ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	height: 60px;
 }
-.nanvbar-left{
-    display: flex;
+.navbar-left {
+	display: flex;
 }
-.nanvbar-left ul {
-    margin-left: 12px;
+.navbar-left ul {
+	margin-left: 12px;
 }
-.nanvbar-left ul li a ,
-.nanvbar-right ul li a {
-    text-decoration: none;
-    color: var(--very-ligth-pink);
-    border: 1px solid var(---white);
-    padding: 8px;
-    border-radius: 8px;
+.navbar-left ul li a,
+.navbar-right ul li a {
+	text-decoration: none;
+	color: var(--very-light-pink);
+	border: 1px solid var(--white);
+	padding: 8px;
+	border-radius: 8px;
 }
-.nanvbar-left ul li a:hover ,
-.nanvbar-right ul li a:hover{
-    border: 1px solid var(--hospital-green);
-    color: var(--hospital-green);
+.navbar-left ul li a:hover,
+.navbar-right ul li a:hover {
+	border: 1px solid var(--hospital-green);
+	color: var(--hospital-green);
 }
-.nanvbar-email{
-    color: var(--very-ligth-pink);
-    font-size: var(--sm);
-    margin-right: 12px;
+.navbar-email {
+	color: var(--very-light-pink);
+	font-size: var(--sm);
+	margin-right: 12px;
 }
-.nanvbar-shopping-cart{
-    position: relative;
+.navbar-shopping-cart {
+	position: relative;
 }
-.nanvbar-shopping-cart img{
-    width: 35px;
+.navbar-shopping-cart div {
+	width: 16px;
+	height: 16px;
+	background-color: var(--hospital-green);
+	border-radius: 50%;
+	font-size: var(--sm);
+	font-weight: bold;
+	position: absolute;
+	top: -6px;
+	right: -3px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.numero{
-    position: absolute;
-    top: -4px;
-    right: 1px;
-}
-@media(max-width: 640px){
-    .menu{
-        display: block;
-    }
-    .nanvbar-left ul{
-        display: none;
-    }
-    .nanvbar-email{
-        display: none;
-    }
+@media (max-width: 640px) {
+	.menu {
+		display: block;
+	}
+	.navbar-left ul {
+		display: none;
+	}
+	.navbar-email {
+		display: none;
+	}
 }
