Imágenes y alias en Webpack

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,4 +1,5 @@
-@use "vars";
+@use 'vars';
+
 nav {
 	display: flex;
 	justify-content: space-between;
@@ -8,7 +9,7 @@ nav {
 .menu {
 	display: none;
 }
-.logo {
+.nav-logo {
 	width: 100px;
 }
 .navbar-left ul,
