--- a/src/styles/ProductItem.scss
+++ b/src/styles/ProductItem.scss
@@ -15,10 +15,14 @@
 	align-items: center;
 	margin-top: 12px;
 }
-.product-info figure {
+.product-info button {
 	margin: 0;
+	border-radius: var(--md);
+	border: 0;
+	background-color: transparent;
+	
 }
-.product-info figure img {
+.product-info button img {
 	width: 35px;
 	height: 35px;
 }
