--- a/src/styles/ProductItem.scss
+++ b/src/styles/ProductItem.scss
@@ -26,6 +26,10 @@
 	width: 35px;
 	height: 35px;
 }
+.product-info button img:hover {
+    cursor: pointer;
+    
+}
 .product-info div p:nth-child(1) {
 	font-weight: bold;
 	font-size: var(--md);
